<?php

namespace GrowthCode\DesignPatterns\Behavioral\Command;

interface Command
{
    public function execute(): string;
}
